moveChart/scaleChart 移动端事件

--- a/example/kline/base/index.html
+++ b/example/kline/base/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kline example</title>
     <style>
         div.wrapper {
             position: relative;
-            margin: 50px auto;
+            margin: 40px auto;
             width: 640px;
         }
     </style>
