--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <div id="volume"></div>
     </div>
 
-    <script src="../../lib/jquery/jquery.js"></script>
-    <script src="../../lib/d3/d3.js"></script>
-    <script src="../../lib/konva/konva.js"></script>
-    <script src="../../lib/moment/moment.js"></script>
-    <script src="../../__build__/kchart.js"></script>
-    <script src="../../__build__/kline-base.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.0.0/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/d3/5.15.0/d3.min.js"></script>
+    <script src="https://cdn.bootcss.com/konva/4.1.5/konva.min.js"></script>
+    <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./kchart.js"></script>
+    <script src="./kline-base.js"></script>
   </body>
 </html>
