--- a/example/kline/base/index.html
+++ b/example/kline/base/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>kline example</title>
     <style>
         div.wrapper {
             position: relative;
-            margin: 40px auto;
+            margin: 45px auto;
             width: 640px;
         }
     </style>
@@ -23,6 +23,8 @@
             <span id="walk-right" class="btn">></span>
             <span id="slice-type" class="btn">!</span>
         </div>
+        <!-- <div id="tips-1"></div> -->
+        <!-- <div id="tips-2"></div> -->
         <div id="chart"></div>
         <div id="volume"></div>
     </div>
